Move results per page menu into pagination. Add jump to page menu. Fix pagination styles.

--- a/src/components/search/SearchUI/SearchUI.css
+++ b/src/components/search/SearchUI/SearchUI.css
@@ -223,3 +223,9 @@
     min-width: 550px;
   }
 }
+
+@media screen and (max-width: 1224px) {
+  .mpc-paginator > div:nth-child(2) {
+    display: none;
+  }
+}
